# OpenDrop

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: beta-gate.yml  ci.yml  codeql.yml  publish.yml
docs/: beta_launch_playbook.md  beta_readiness_report.md  beta_release_gates.md  known_limitations.md  troubleshooting.md
opendrop/: __init__.py  __main__.py  cli.py  config.py
opendrop/core/: converter.py  downloader.py  hardware.py  orchestrator.py  quantizer.py  registry.py  resolver.py
opendrop/inference/: __init__.py  llamacpp.py  server.py
opendrop/training/: __init__.py  dataset.py  finetune.py
opendrop/ui/: tui.py  web.py
tests/: test_cli.py  test_config.py  test_dataset.py  test_downloader.py  test_finetune.py  test_hardware.py  test_quantizer.py  test_registry.py  test_resolver.py  test_server.py
