[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opendrop"
version = "0.1.0b1"
description = "Universal open-weight local AI aggregator — drop a model link, run it locally"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "local-ai", "inference", "gguf", "llama-cpp", "fine-tuning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "platformdirs>=4.2",
    "psutil>=5.9",
    "textual>=0.61",
    "huggingface-hub>=0.23",
    "tqdm>=4.66",
    "pydantic>=2.7",
    "anyio>=4.4",
    "sse-starlette>=2.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/fernandogarzaaa/OpenDrop"
Repository = "https://github.com/fernandogarzaaa/OpenDrop"
"Bug Tracker" = "https://github.com/fernandogarzaaa/OpenDrop/issues"

[project.optional-dependencies]
training = [
    "torch>=2.3",
    "transformers>=4.41",
    "datasets>=2.20",
    "peft>=0.11",
    "trl>=0.9",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
]
training-apple = [
    "mlx>=0.14",
    "mlx-lm>=0.14",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
opendrop = "opendrop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["opendrop"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["B008", "N802", "N806"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
